k8s/api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: secureguard-api
    namespace: secureguard
spec:
    replicas: 1
    selector:
        matchLabels:
            app: secureguard-api
    template:
        metadata:
            labels:
                app: secureguard-api
        spec:
            containers:
                - name: secureguard-api
                  image: akshayyyyy/secureguard-api
                  ports:
                      - containerPort: 4000
            volumes:
                - name: migration-scripts
                  configMap:
                      name: db-migrations
