k8s/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: secureguard-api-svc
    namespace: secureguard
spec:
    selector:
        app: secureguard-api
    ports:
        - port: 80
          targetPort: 4000
