k8s/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: postgres-hl
    namespace: secureguard
spec:
    clusterIP: None
    selector:
        app: postgres
    ports:
        - port: 5432
